--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -7,7 +7,7 @@
   <header>
     <div class="head_div">
       <img src="../assets/img/besant_logo.jfif" alt="Besant" class="logo" />
-      Besant
+      Besant tech
     </div>
     <img src="../assets/img/banner.jpg" alt="Banner img" class="banner" />
   
