signup button changed

--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -18,7 +18,7 @@
         <li><a routerLink="/teams">Teams</a></li>
       </ul>
   
-      <span><button class="btn2" routerLink="signUp">Sign up/Login</button></span>
+      <span><button class="btn2" routerLink="signUp">Sign up or Login</button></span>
     </nav>
   </header>
   
